# starting-ragchatbot-codebase

./: CLAUDE.md  README.md  diagnose.py  fix_env_permissions.sh  manage_server.py  pyproject.toml  run.sh  start_server.py  sync-python-version.sh
.cursor/plans/: multi-4cca736b.plan.md
.cursor/rules/: codebase-understand.mdc  cursor-project-rules.mdc  debugging-analysis.mdc  documentation-consistency.mdc  feature-development.mdc  git-workflow.mdc  project-commands.mdc  project-overview.mdc
backend/: ai_generator.py  app.py  config.py  document_processor.py  rag_system.py  search_tools.py  vector_store.py
chroma_db/: chroma.sqlite3
docs/: overview.md  prompts.md  system_overview.md
docs/study_note/: rag_system_study_note.md
frontend/: index.html  script.js  style.css
scripts/: test_llm_connections.py
